@@ -13,13 +13,21 @@
 // limitations under the License.
 
 import '../tracks/all_frontend';
+
 import * as m from 'mithril';
 
+import {assertExists} from '../base/logging';
 import {Actions} from '../common/actions';
 import {HttpRpcEngine, RPC_URL} from '../common/http_rpc_engine';
+import {StatusResult} from '../common/protos';
+import * as version from '../gen/perfetto_version';
+import {perfetto} from '../gen/protos';
 
 import {globals} from './globals';
 import {showModal} from './modal';
+
+const CURRENT_API_VERSION = perfetto.protos.TraceProcessorApiVersion
+                                .TRACE_PROCESSOR_CURRENT_API_VERSION;
 
 const PROMPT = `Trace Processor Native Accelerator detected on ${RPC_URL} with:
 $loadedTraceName
@@ -43,6 +51,28 @@ Using the native accelerator has some minor caveats:
 too old. Get the latest version from get.perfetto.dev/trace_processor.
 `;
 
+
+const MSG_TOO_OLD = `The Trace Processor instance on ${RPC_URL} is too old.
+
+This UI requires TraceProcessor features that are not present in the
+Trace Processor native accelerator you are currently running.
+If you continue, this is almost surely going to cause UI failures.
+
+Please update your local Trace Processor binary:
+
+curl -LO https://get.perfetto.dev/trace_processor
+chmod +x ./trace_processor
+./trace_processor --httpd
+
+UI version: ${version.VERSION}
+TraceProcessor RPC API required: ${CURRENT_API_VERSION} or higher
+
+TraceProcessor version: $tpVersion
+RPC API: $tpApi
+`;
+
+let forceUseOldVersion = false;
+
 // Try to connect to the external Trace Processor HTTP RPC accelerator (if
 // available, often it isn't). If connected it will populate the
 // |httpRpcState| in the frontend local state. In turn that will show the UI
@@ -53,41 +83,81 @@ too old. Get the latest version from get.perfetto.dev/trace_processor.
 export async function CheckHttpRpcConnection(): Promise<void> {
   const state = await HttpRpcEngine.checkConnection();
   globals.frontendLocalState.setHttpRpcState(state);
+  if (!state.connected) return;
+  const tpStatus = assertExists(state.status);
 
-  // If a trace is already loaded in the trace processor (e.g., the user
-  // launched trace_processor_shell -D trace_file.pftrace), prompt the user to
-  // initialize the UI with the already-loaded trace.
-  if (state.connected && state.loadedTraceName) {
-    showModal({
-      title: 'Use Trace Processor Native Acceleration?',
-      content:
-          m('.modal-pre',
-            PROMPT.replace('$loadedTraceName', state.loadedTraceName)),
-      buttons: [
-        {
-          text: 'YES, use loaded trace',
-          primary: true,
-          id: 'rpc_load',
-          action: () => {
-            globals.dispatch(Actions.openTraceFromHttpRpc({}));
-          }
-        },
-        {
-          text: 'YES, but reset state',
-          primary: false,
-          id: 'rpc_reset',
-          action: () => {}
-        },
-        {
-          text: 'NO, Use builtin WASM',
-          primary: false,
-          id: 'rpc_force_wasm',
-          action: () => {
-            globals.dispatch(
-                Actions.setNewEngineMode({mode: 'FORCE_BUILTIN_WASM'}));
-          }
-        },
-      ],
-    });
+  if (tpStatus.apiVersion < CURRENT_API_VERSION) {
+    await showDialogTraceProcessorTooOld(tpStatus);
+    if (!forceUseOldVersion) return;
   }
+
+  if (tpStatus.loadedTraceName) {
+    // If a trace is already loaded in the trace processor (e.g., the user
+    // launched trace_processor_shell -D trace_file.pftrace), prompt the user to
+    // initialize the UI with the already-loaded trace.
+    return showDialogToUsePreloadedTrace(tpStatus);
+  }
+}
+
+async function showDialogTraceProcessorTooOld(tpStatus: StatusResult) {
+  return showModal({
+    title: 'Your Trace Processor binary is outdated',
+    content:
+        m('.modal-pre',
+          MSG_TOO_OLD.replace('$tpVersion', tpStatus.humanReadableVersion)
+              .replace('$tpApi', `${tpStatus.apiVersion}`)),
+    buttons: [
+      {
+        text: 'Use builtin Wasm',
+        primary: true,
+        id: 'tp_old_wasm',
+        action: () => {
+          globals.dispatch(
+              Actions.setNewEngineMode({mode: 'FORCE_BUILTIN_WASM'}));
+        }
+      },
+      {
+        text: 'Use old version regardless (might crash)',
+        primary: false,
+        id: 'tp_old_cont',
+        action: () => {
+          forceUseOldVersion = true;
+        }
+      },
+    ],
+  });
+}
+
+async function showDialogToUsePreloadedTrace(tpStatus: StatusResult) {
+  return showModal({
+    title: 'Use Trace Processor Native Acceleration?',
+    content:
+        m('.modal-pre',
+          PROMPT.replace('$loadedTraceName', tpStatus.loadedTraceName)),
+    buttons: [
+      {
+        text: 'YES, use loaded trace',
+        primary: true,
+        id: 'rpc_load',
+        action: () => {
+          globals.dispatch(Actions.openTraceFromHttpRpc({}));
+        }
+      },
+      {
+        text: 'YES, but reset state',
+        primary: false,
+        id: 'rpc_reset',
+        action: () => {}
+      },
+      {
+        text: 'NO, Use builtin Wasm',
+        primary: false,
+        id: 'rpc_force_wasm',
+        action: () => {
+          globals.dispatch(
+              Actions.setNewEngineMode({mode: 'FORCE_BUILTIN_WASM'}));
+        }
+      },
+    ],
+  });
 }
