@@ -7,7 +7,10 @@ Unreleased:
   Trace Processor:
     *
   UI:
-    *
+    * Added warning dialog when trying to use a trace_processor_shell --httpd
+      which is too old.
+    * Added warning dialog when trying to use a trace_processor_shell --httpd
+      RPC instance from more than one tab.
   SDK:
     *
 
